--- a/styles/main.css
+++ b/styles/main.css
@@ -54,6 +54,10 @@ textarea#log {
   text-align: left;
   resize: none;
 }
+#inventory {
+  list-style-type: none;
+  padding: 0;
+}
 footer {
   position: absolute;
   bottom: 0;
